--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hook-component",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Use react hooks in class components with render props",
   "author": "karlsander",
   "license": "MIT",
@@ -23,12 +23,9 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^16.8.0"
   },
   "devDependencies": {
-    "@svgr/rollup": "^2.4.1",
     "@types/jest": "^23.1.5",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
@@ -44,10 +41,9 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-typescript2": "^0.17.0",
     "rollup-plugin-url": "^1.4.0",
-    "typescript": "^2.8.3"
+    "typescript": "^3.4.3"
   },
   "files": [
     "dist"
